--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
